# motiongenesis

./: .env.development  README.md  heroku.yml  package-lock.json  package.json
motiongenesis/: .env.development  package.json
public/: index.html
server/: README.md  binding.gyp  hello_world.cc  package-lock.json  package.json  server.js
server/lib/: README.md
server/lib/dummylib/: CMakeLists.txt  dummylib.cc  dummylib.h
src/: App.css  App.js
